<resources>
    <string name="app_name">CalculadHora</string>
    <string name="label1">Horário de Entrada</string>
    <string name="label2">Saída para Almoço:</string>
    <string name="label3">Retorno do Almoço:</string>
    <string name="bt1">Adicionar Pausa</string>
    <string name="btcalc">Calcular Saída</string>
    <string name="zerohora">00:00</string>
    <string name="label4">Total de Pausa</string>
    <string name="saida">Saída</string>
    <string name="retorno">Retorno</string>
    <string name="botao_limpar">Limpar Pausas</string>
    <string name="limpa_pausa">Botão Limpa Pausa</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_entrada">Entrada</string>
    <string name="tab_almoco">Lanche</string>
    <string name="tab_retorno">Retorno</string>
    <string name="tab_pausa">Pausas</string>
    <string name="tab_saida">Saída</string>
    <string name="settings">Ajustes</string>
    <string name="pausas_extras">Pausas Extras</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="calcular_hora_trabalhada">Calcular Hora Trabalhada</string>
    <string name="carga_horaria">Carga Horária</string>
    <string name="horas">Horas</string>
    <string name="proximo">Próximo</string>
    <string name="voltar">Voltar</string>
    <string name="bemvindo">Bem vindo à CalculadHora</string>
    <string name="calcular">Calcular</string>
    <string name="almoco">Almoço</string>
    <string name="display1">O último horário de saída calculado foi:</string>
    <string name="display2">Sua carga horária de trabalho está configurada para:</string>
    <string name="salvar">Salvar</string>
    <string name="display3">Ajuste abaixo a quantidade de horas que você trabalha por dia (Sem contar o tempo de almoço).</string>
    <string name="display4">Você pode desativar o calculo de pausa extra se você não faz nenhuma pausa além do almoço.</string>
    <string name="atencao">O Valor está menor que o anterior!</string>
    <string name="alarme">Alarme</string>
    <string name="slide">Slide</string>
    <string name="quer_fazer">O que você quer fazer agora?</string>
    <string name="quero_saida">Quero calcular a hora de sair do trabalho</string>
    <string name="quero_total">Quero calcular o total de horas trabalhadas e hora extra</string>
    <string name="total_pausa">Total de Pausa Adicionada</string>
    <string name="resultado">Resultados</string>
    <string name="horas_trabalhadas">Horas Trabalhadas</string>
    <string name="banco_horas">Banco de Horas</string>
    <string name="bh_positivo">Banco de Horas Positivo!</string>
    <string name="bh_negativo">Banco de Horas Negativo!</string>
    <string name="bh_zerado">Banco de Horas Zerado!</string>
    <string name="concluir">Concluir</string>
    <string name="horas_previstas">Horas Previstas</string>
    <string name="next">PROXIMO</string>
    <string name="skip">PULAR</string>
    <string name="start">FINALIZAR</string>
    <string name="slide_1_desc">Bem vindo ao seu app para calcular as horas trabalhadas :)</string>
    <string name="slide_2_desc">Toque no horário para editar.\nDeslize para os lados se precisar voltar ou avançar</string>
    <string name="slide_3_desc">Adicione quantas pausas precisar\nToque na lixeira se precisar excluir</string>
    <string name="slide_4_desc">Você pode definir um alarme para não esquecer a hora da saída</string>
    <string name="slide_5_desc">Ajuste a quantidade de horas trabalhadas e ative/desative as pausas extras</string>
    <string name="criar_alarme">Criar Alarme</string>
    <string name="ajuda">Ajuda - FAQ</string>

    <string-array name="faq">
        <item>Pergunta 1</item>
        <item>Pergunta 2</item>
        <item>Pergunta 3</item>
        <item>Pergunta 4</item>
        <item>Pergunta 5</item>
        <item>Pergunta 6</item>
        <item>Pergunta 7</item>
        <item>Pergunta 8</item>
        <item>Pergunta 9</item>
        <item>Pergunta 10</item>
        <item>Pergunta 11</item>
        <item>Pergunta 12</item>
        <item>Pergunta 13</item>
        <item>Pergunta 14</item>
        <item>Pergunta 15</item>
        <item>Pergunta 16</item>
        <item>Pergunta 17</item>
        <item>Pergunta 18</item>
        <item>Pergunta 19</item>
        <item>Pergunta 20</item>
    </string-array>
    <string-array name="resp">
        <item>Resposta 1</item>
        <item>Resposta 2</item>
        <item>Resposta 3</item>
        <item>Resposta 4</item>
        <item>Resposta 5</item>
        <item>Resposta 6</item>
        <item>Resposta 7</item>
        <item>Resposta 8</item>
        <item>Resposta 9</item>
        <item>Resposta 10</item>
        <item>Resposta 11</item>
        <item>Resposta 12</item>
        <item>Resposta 13</item>
        <item>Resposta 14</item>
        <item>Resposta 15</item>
        <item>Resposta 16</item>
        <item>Resposta 17</item>
        <item>Resposta 18</item>
        <item>Resposta 19</item>
        <item>Resposta 20</item>
    </string-array>
</resources>
