<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculadHoraID"
            android:icon="@drawable/ic_calculadhora"
            android:title="@string/btcalc" />
        <item
            android:id="@+id/nav_calculaTempoID"
            android:icon="@drawable/ic_calc_tempo"
            android:title="@string/calcular_hora_trabalhada" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ajuda_icon"
            android:title="@string/ajuda" />
    </group>

</menu>
