<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_cinza"
    tools:context=".SaidaHT">

    <Button
        android:id="@+id/botaoCalcHTID"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/bg_green"
        android:text="@string/calcular_hora_trabalhada"
        android:textColor="@color/cor_fonte"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaSaidaHTID"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/imageViewSaidaHTID"
        android:layout_width="@dimen/tamanho_imagem"
        android:layout_height="@dimen/tamanho_imagem"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/tab_entrada"
        android:src="@drawable/saida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/horaSaidaHTID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/bg_texto"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zerohora"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/caixa_hora"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tituloSaidaHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/saida"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/titulo_hora"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horaSaidaHTID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/atencaoID2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/atencao"
        android:textColor="@color/vermelho"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaSaidaHTID" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>