<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_cinza"
    tools:context=".Entrada">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/horaEntradaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/bg_texto"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zerohora"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/caixa_hora"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageViewEntradaID"
        android:layout_width="@dimen/tamanho_imagem"
        android:layout_height="@dimen/tamanho_imagem"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/tab_entrada"
        android:src="@drawable/entrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/label1"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/titulo_hora"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horaEntradaID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/slidingID"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/slide"
        android:src="@drawable/sliding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horaEntradaID" />

</android.support.constraint.ConstraintLayout>