<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_cinza"
    tools:context=".PausaExtra">

    <Button
        android:id="@+id/proximoID4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/bg_green"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/proximo"
        android:textAllCaps="true"
        android:textColor="@color/cor_fonte"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/coffeID"
        app:layout_constraintTop_toBottomOf="@+id/limparPausasID"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/botaoAddPausaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/bg_green"
        android:padding="@dimen/fab_margin"
        android:text="@string/bt1"
        android:textAllCaps="true"
        android:textColor="@color/cor_fonte"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/saida"
        android:textColor="@color/cor_fonte"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/botaoAddPausaID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/retorno"
        android:textColor="@color/cor_fonte"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/botaoAddPausaID"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/pausaSaidaID"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@color/bg_texto"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zerohora"
        android:inputType="time"
        android:padding="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="@color/cor_fonte"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/pausaRetornoID"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pausaRetornoID"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@color/bg_texto"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zerohora"
        android:inputType="time"
        android:padding="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="@color/cor_fonte"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="160dp"
        android:text="@string/pausas_extras"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/titulo_hora"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botaoAddPausaID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/coffeID"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/tab_pausa"
        android:src="@drawable/coffe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limparPausasID" />

    <TextView
        android:id="@+id/maisPausasID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/botao_limpar"
        android:textColor="@color/cor_fonte"
        app:layout_constraintStart_toEndOf="@+id/limparPausasID"
        app:layout_constraintTop_toBottomOf="@+id/botaoAddPausaID" />

    <ImageView
        android:id="@+id/limparPausasID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/botao_limpar"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoAddPausaID" />

    <TextView
        android:id="@+id/textTotalPausaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bg_cinza"
        android:padding="6dp"
        android:text="@string/total_pausa"
        android:textColor="@color/cor_fonte"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/botaoAddPausaID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalPausaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/bg_cinza"
        android:padding="6dp"
        android:text="@string/zerohora"
        android:textColor="@color/cor_fonte"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/botaoAddPausaID"
        app:layout_constraintStart_toEndOf="@+id/textTotalPausaID" />

</android.support.constraint.ConstraintLayout>