<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/bg_cinza">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/helpIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ajuda_icon"
                android:contentDescription="@string/ajuda"
                android:padding="4dp" />

            <TextView
                android:id="@+id/helpTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/helpIcon"
                android:layout_toRightOf="@id/helpIcon"
                android:text="@string/slide_2_desc"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/cor_fonte"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/helpAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/helpTitle"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/helpIcon"
                android:text="@string/slide_5_desc"
                android:textColor="@color/cor_fonte" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>