<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_cinza"
    tools:context=".SaidaCalculada">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/alarmeID"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/bg_green"
        android:text="@string/criar_alarme"
        android:textColor="@color/cor_fonte"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/botaoCalcID"
        android:layout_width="275dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/bg_green"
        android:text="@string/btcalc"
        android:textColor="@color/cor_fonte"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoSaidaID"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/resultadoSaidaID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/bg_texto"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/zerohora"
        android:inputType="time"
        android:textAlignment="center"
        android:textColor="@color/cor_fonte"
        android:textSize="@dimen/caixa_hora"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/bg_texto"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/resultadoSaidaID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label1"
            android:textColor="@color/cor_fonte"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/resumoEntrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="8dp"
            android:text="@string/zerohora"
            android:textColor="@color/cor_fonte"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/resumoAlmocoS"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="7dp"
            android:text="@string/label2"
            android:textColor="@color/cor_fonte"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="1dp"
            android:text="@string/label3"
            android:textColor="@color/cor_fonte"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/resumoAlmocoR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="1dp"
            android:text="@string/zerohora"
            android:textColor="@color/cor_fonte"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/resumoAlmocoS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="7dp"
            android:text="@string/zerohora"
            android:textColor="@color/cor_fonte"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/resumoAlmocoR"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>